# MovieRecommender

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  analysis.ipynb  build.sh  datastructures.py  download_ds.sh  final.ipynb  main.ipynb  main.py  model.py  utils.py
Data/ml-latest/: mappings.pkl
Data/ml-latest-small/: dataindx_cache.pkl  mappings.pkl
src/: als_py.py  cppEngine.cpp  data.py  trainer.py  utils.py
src/jax/: bias_model.py
src/py/: data.py
src/py/jax/: model.py  my_notebook.ipynb  utils.py
src/py/vanilla/: als.py  data.py  trainer.py
